Fixed table overflow

--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,6 @@ background-color: cadetblue;
     
     .horaio{
         margin: 10px;
-        height: 10px;
         width: auto;
         text-align: center;
     }
